# SciViPy

./: .gitignore  BOUT_CARTESIAN_CONVERT.py  Bout conversion code 1.0.py  CRYSTAL_VIS_SCRIPT.py  Data_Export_Script.py  GIF_MAKER.py  JOREK_VIS_SCRIPT.py  List Clip Reader.py  Max.py  NETCDF_to_vti.py  README.md  TIME_READER.py  Test (Not needed)  Test (Not needed).py  Time Reader.py  bout_cartesian_convert.py  crystal_vis_script.py  gif_maker.py  gif_maker.py.f6f9f1fd71d7baae32b2123a9afe3949.tmp  jorek_vis_script.py  pyproject.toml  setup.cfg  time_reader.py  xyzConverterScript 2.0.py  xyzConverterScript.py  xyz_to_csv.py  xyzviewer.py
.github/workflows/: black.yml  main.yml  tests.yml
BOUT++ Conversion Scripts/: DudsonCode.py  NETCDF_to_vti.py
SciViPy/: __init__.py  bout_cartesian_convert.py  crystal_vis_script.py  gif_maker.py  jorek_vis_script.py  make_gif.py  time_reader.py  xyz_to_csv.py
Scripts/: gif_maker.py  jorek_vis_script.py  time_reader.py  xyz_to_csv.py
Testing/: TEST_CRYSTAL_VIS_SCRIPT.py  TEST_GIF_MAKER.py  TEST_JOREK_VIS_SCRIPT.py  TEST_TIME_READER.py  gif_maker.py  jorek_vis_script.py
docs/: bout_cartesian_convert.rst  conf.py  crystal_vis_script.rst  index.rst  jorek_vis_script.rst  time_reader.rst  xyz_to_csv.rst
docs/modules/: bout_cartesian_convert.rst  crystal_vis_script.rst  gif_maker.rst  jorek_vis_script.rst  make_gif.rst  time_reader.rst  xyz_to_csv.rst
docs/source/: conf.py  index.rst  modules.rst
source/: conf.py  index.rst
tests/: test_make_gif.py  test_time_reader.py
tests/test_data/time_reader/: expected.txt  input.txt
