[metadata]
name = SciViPy
description = Data visualisation tools for UKAEA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DomLonghorn/SciViPy
author = Dom Longhorn, Freddie Carlisle
license = MPL 2.0
license_file = license.md
keywords = visualisation
python_requires = >= 3.8
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Source = https://github.com/DomLonghorn/SciViPy
    Tracker = https://github.com/DomLonghorn/SciViPy/issues

[options]
packages = find:
install_requires =
    numpy
    xarray
    matplotlib
    tk
    imageio
    xbout

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    sphinx_rtd_theme

[flake8]
max-line-length = 88
